# recluse

./: .gitignore  .mailmap  CLA.md  Cargo.toml  Makefile  README.md  REUSE.toml  deny.toml  mise.toml  nfpm.yaml
.cargo/: config.toml
.github/workflows/: build.yml  cla.yml  legal.yml
crates/base/: Cargo.toml
crates/base/src/: lib.rs  serde.rs
crates/recluse/: Cargo.toml  build.rs
crates/recluse/src/: config.rs  controller_backend.rs  controller_web.rs  main.rs  proxy.rs  storage.rs  telemetry.rs
crates/recluse/src/assets/: base.css  manifest.webmanifest
crates/repos/: Cargo.toml
crates/repos/src/: go.rs  lib.rs  zig.rs
crates/zorian/: Cargo.toml
crates/zorian/src/: config.rs  controller_backend.rs  controller_web.rs  main.rs  proxy.rs  storage.rs  utils.rs
crates/zorian/src/assets/: base.css  robots.txt
pkg/: recluse.service  recluse.toml  zorian.service  zorian.toml
pkg/scripts/: postinstall.sh  preinstall.sh  preremove.sh
src/: config.rs  controller_backend.rs  controller_web.rs  controller_zig.rs  index.html  main.rs  proxy.rs  service_config.rs  service_storage.rs  service_upstream.rs  telemetry.rs  utils.rs
src/assets/: base.css
src/backends/: go.rs  mod.rs  zig.rs
tests/smoke/: Cargo.toml  run-local.sh
tests/smoke/src/: main.rs
xtask/: Cargo.toml  build.rs
xtask/src/: lib.rs  licenses.rs  main.rs
