# Copyright (c) 2026 Nikolay Govorov
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "xtask"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
krates = "0.20"
rayon = "1.10"
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
spdx = { version = "0.13", features = ["detection-inline-cache", "text"] }
