# Copyright (c) 2026 Nikolay Govorov
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "smoke"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "smoke"
path = "src/main.rs"

[dependencies]
hex.workspace = true
reqwest = { version = "0.13", features = ["blocking", "native-tls"], default-features = false }
sha2 = "0.10"
